README updated-additonal technologies added

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -22,7 +22,8 @@
         </form>
       </div>
       <p class="signup-below">
-        Need an account? <a href="/auth/signup">Sign up</a>
+        <a href="/">Home</a> | Need an account?
+        <a href="/auth/signup">Sign up</a>
       </p>
     </main>
 
