--- a/views/forms/edit.ejs
+++ b/views/forms/edit.ejs
@@ -16,7 +16,7 @@
 
 <p>
   
-  <a href="/forms/<%= form._id %>">👁 View Form</a>
+  <a class="view-form " href="/forms/<%= form._id %>">👁 View Form</a>
 </p>
    
 
