--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,7 +15,7 @@
   <% if (typeof hideLogout === 'undefined' || !hideLogout) { %>
   <div class="logout-corner">
     <form action="/auth/logout" method="POST" style="display: inline">
-      <button type="submit" class="logout-btn">Logout</button>
+      <button type="submit" class="btn">Logout</button>
     </form>
   </div>
   <% } %> <% } %>
