--- a/views/forms/show.ejs
+++ b/views/forms/show.ejs
@@ -11,36 +11,68 @@
 
     <table class="table">
       <tbody>
-        <tr><th>Name</th><td><%= form.name %></td></tr>
-        <tr><th>Rank</th><td><%= form.rankType %> <%= form.rankNumber %></td></tr>
-        <tr><th>Belt</th><td><%= form.beltColor || "-" %></td></tr>
-        <tr><th>Category</th><td><%= form.category %></td></tr>
-        <tr><th>Learned</th><td><%= form.learned ? "Yes" : "No" %></td></tr>
+        <tr>
+          <th>Name</th>
+          <td><%= form.name %></td>
+        </tr>
+        <tr>
+          <th>Rank</th>
+          <td><%= form.rankType %> <%= form.rankNumber %></td>
+        </tr>
+        <tr>
+          <th>Belt</th>
+          <td><%= form.beltColor || "-" %></td>
+        </tr>
+        <tr>
+          <th>Category</th>
+          <td><%= form.category %></td>
+        </tr>
+        <tr>
+          <th>Learned</th>
+          <td><%= form.learned ? "Yes" : "No" %></td>
+        </tr>
         <tr>
           <td colspan="2">
-            <div style="font-weight:bold;margin-bottom:4px">Description</div>
+            <div style="font-weight: bold; margin-bottom: 4px">Description</div>
             <div class="description-block"><%= form.description || "-" %></div>
           </td>
         </tr>
-        <tr>
+        <tr class="meta-row">
           <th>Reference</th>
           <td>
             <% if (form.referenceUrl) { %>
-              <a href="<%= form.referenceUrl %>" target="_blank" rel="noopener">Open link</a>
+            <a href="<%= form.referenceUrl %>" target="_blank" rel="noopener"
+              >Open link</a
+            >
             <% } else { %> - <% } %>
           </td>
         </tr>
-        <tr><th>Created</th><td><%= new Date(form.createdAt).toLocaleString() %></td></tr>
-        <tr><th>Updated</th><td><%= new Date(form.updatedAt).toLocaleString() %></td></tr>
+        <tr class="meta-row">
+          <th>Created</th>
+          <td><%= new Date(form.createdAt).toLocaleString() %></td>
+        </tr>
+        <tr class="meta-row">
+          <th>Updated</th>
+          <td><%= new Date(form.updatedAt).toLocaleString() %></td>
+        </tr>
       </tbody>
     </table>
 
-    <p style="margin-top:12px"><a href="/forms/<%= form._id %>/edit">Edit</a></p>
+    <p style="margin-top: 12px">
+      <a href="/forms/<%= form._id %>/edit">Edit</a>
+    </p>
 
     <div class="delete-center">
-      <form action="/forms/<%= form._id %>?_method=DELETE" method="POST">
-        <button type="submit" onclick="return confirm('Soft delete this form?')">Delete</button>
-      </form>
+      <div class="delete-center--higher">
+        <form action="/forms/<%= form._id %>?_method=DELETE" method="POST">
+          <button
+            type="submit"
+            onclick="return confirm('Soft delete this form?')"
+          >
+            Delete
+          </button>
+        </form>
+      </div>
     </div>
 
     <%- include('../partials/footer') %>
