--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,20 +6,19 @@
     <link rel="stylesheet" href="/css/chart.css">
     <link rel="stylesheet" href="/css/scroll.css"><!-- combobox + chart scroll styles -->
   </head>
-
+ <%- include('partials/nav') %>
   <body class="page-new">
-    <%- include('partials/nav') %>
-
-    <h1 class="h1-new"><%= title %></h1>
+    
+    <h1 class="h1-new" > <%= title %> </h1>
 
     <% if (typeof error !== 'undefined' && error) { %>
       <p class="error"><%= error %></p>
     <% } %>
 
-    <div class="new-layout">
+    <div class="new-layout" style="margin-top: 7vh;">
       <!-- LEFT: Create Form -->
       <section class="new-left">  
-        <form class="page-new-form" action="/forms" method="POST" autocomplete="off">
+        <form class="page-new-form" style="margin-top: 5vh;" action="/forms" method="POST" autocomplete="off">
           <!-- Name (custom combobox: type-to-filter + click arrow to open list) -->
           <label class="input" for="name">Choose form name:</label>
           <div
@@ -117,7 +116,7 @@
 
       <!-- RIGHT: Reference (chart + requirements) -->
       <section class="new-right">
-        <h2>Rank Progression Reference</h2>
+        <h2 style="text-align:center;">Rank Progression Reference</h2>
         <div id="ref-scroll" class="ref-scroll">
           <div class="chart-wrap">
             <!-- Keep bar widths; allow sideways scroll on narrow screens -->
