--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,5 +4,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title><%= title || "Dojo App" %></title>
-<link rel="stylesheet" href="/css/main.css" />
+<!-- <link rel="stylesheet" href="/css/main.css" /> -->
+<link rel="stylesheet" href="/css/main.css?v=1.2">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
