--- a/views/new.ejs
+++ b/views/new.ejs
@@ -110,7 +110,7 @@
           />
           <% if (errors && errors.referenceUrl) { %><small class="error"><%= errors.referenceUrl %></small><% } %>
 
-          <button type="submit">Create Form</button>
+          <button type="submit" style="margin-top: 30px; margin-bottom:-16px;">Create Form</button>
         </form>
       </section>
 
